replace old network tutorial nb

--- a/_posts/tutorials/networkx.ipynb
+++ b/_posts/tutorials/networkx.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# Network Graphs with Plotly"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,10 +17,19 @@
    },
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "\n",
     "import plotly.plotly as py\n",
-    "from plotly.graph_objs import *"
+    "from plotly.graph_objs import *\n",
+    "\n",
+    "import networkx as nx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Store position as node attribute data for random_geometric_graph and find node near center (0.5, 0.5)"
    ]
   },
   {
@@ -22,40 +40,112 @@
    },
    "outputs": [],
    "source": [
-    "G=nx.random_geometric_graph(200,0.125)"
+    "G=nx.random_geometric_graph(200,0.125)\n",
+    "pos=nx.get_node_attributes(G,'pos')\n",
+    "\n",
+    "dmin=1\n",
+    "ncenter=0\n",
+    "for n in pos:\n",
+    "    x,y=pos[n]\n",
+    "    d=(x-0.5)**2+(y-0.5)**2\n",
+    "    if d<dmin:\n",
+    "        ncenter=n\n",
+    "        dmin=d\n",
+    "        \n",
+    "p=nx.single_source_shortest_path_length(G,ncenter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add edges as disconnected lines in a single trace and nodes as a scatter trace"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# add the edges in as disconnected lines in a single trace\n",
-    "edge_trace = Scatter(x=[], y=[], mode='lines')\n",
+    "edge_trace = Scatter(\n",
+    "    x=[], \n",
+    "    y=[], \n",
+    "    line=Line(width=0.5,color='#888'),\n",
+    "    hoverinfo='none',\n",
+    "    mode='lines')\n",
+    "\n",
     "for edge in G.edges():\n",
     "    x0, y0 = G.node[edge[0]]['pos']\n",
     "    x1, y1 = G.node[edge[1]]['pos']\n",
     "    edge_trace['x'] += [x0, x1, None]\n",
     "    edge_trace['y'] += [y0, y1, None]\n",
     "\n",
-    "# add the nodes in as a scatter\n",
-    "node_trace = Scatter(x=[], y=[], mode='markers', marker=Marker(size=[]))\n",
+    "node_trace = Scatter(\n",
+    "    x=[], \n",
+    "    y=[], \n",
+    "    text=[],\n",
+    "    mode='markers', \n",
+    "    hoverinfo='text',\n",
+    "    marker=Marker(\n",
+    "        showscale=True,\n",
+    "        # colorscale options\n",
+    "        # 'Greys' | 'Greens' | 'Bluered' | 'Hot' | 'Picnic' | 'Portland' |\n",
+    "        # Jet' | 'RdBu' | 'Blackbody' | 'Earth' | 'Electric' | 'YIOrRd' | 'YIGnBu'\n",
+    "        colorscale='YIGnBu',\n",
+    "        reversescale=True,\n",
+    "        color=[], \n",
+    "        size=10,         \n",
+    "        colorbar=dict(\n",
+    "            thickness=15,\n",
+    "            title='Node Connections',\n",
+    "            xanchor='left',\n",
+    "            titleside='right'\n",
+    "        ),\n",
+    "        line=dict(width=2)))\n",
+    "\n",
     "for node in G.nodes():\n",
     "    x, y = G.node[node]['pos']\n",
     "    node_trace['x'].append(x)\n",
-    "    node_trace['y'].append(y)\n",
+    "    node_trace['y'].append(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Color node points by the number of connections. \n",
     "\n",
-    "# size the node points by the number of connections\n",
-    "for node, adjacencies in enumerate(G.adjacency_list()):\n",
-    "    node_trace['marker']['size'].append(len(adjacencies))"
+    "Another option would be to size points by the number of connections \n",
+    "i.e. ```node_trace['marker']['size'].append(len(adjacencies))``` "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for node, adjacencies in enumerate(G.adjacency_list()):\n",
+    "    node_trace['marker']['color'].append(len(adjacencies))\n",
+    "    node_info = '# of connections: '+str(len(adjacencies))\n",
+    "    node_trace['text'].append(node_info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create figure and send to Plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -63,31 +153,41 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~theengineear/2801.embed\" height=\"525\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/7803.embed\" height=\"650px\" width=\"650px\"></iframe>"
       ],
       "text/plain": [
-       "<plotly.tools.PlotlyDisplay at 0x106bf9cd0>"
+       "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# create a figure so we can customize a couple more things\n",
     "fig = Figure(data=Data([edge_trace, node_trace]),\n",
-    "             layout=Layout(title='random geometric graph from networkx', plot_bgcolor=\"rgb(217, 217, 217)\",\n",
-    "                           showlegend=False, xaxis=XAxis(showgrid=False, zeroline=False, showticklabels=False),\n",
-    "                           yaxis=YAxis(showgrid=False, zeroline=False, showticklabels=False)))\n",
+    "             layout=Layout(\n",
+    "                title='<br>Network graph made with Python',\n",
+    "                titlefont=dict(size=16),\n",
+    "                showlegend=False, \n",
+    "                width=650,\n",
+    "                height=650,\n",
+    "                hovermode='closest',\n",
+    "                margin=dict(b=20,l=5,r=5,t=40),\n",
+    "                annotations=[ dict(\n",
+    "                    text=\"Python code: <a href='https://plot.ly/ipython-notebooks/network-graphs/'> https://plot.ly/ipython-notebooks/network-graphs/</a>\",\n",
+    "                    showarrow=False,\n",
+    "                    xref=\"paper\", yref=\"paper\",\n",
+    "                    x=0.005, y=-0.002 ) ],\n",
+    "                xaxis=XAxis(showgrid=False, zeroline=False, showticklabels=False),\n",
+    "                yaxis=YAxis(showgrid=False, zeroline=False, showticklabels=False)))\n",
     "\n",
-    "# send the figure to Plotly and embed an iframe in this notebook\n",
     "py.iplot(fig, filename='networkx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -120,15 +220,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
@@ -171,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
