update shiny doc

--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -15,6 +15,12 @@ has_thumbnail: false
 display_as: get_request
 ---
 
+```{r, echo = FALSE, message=FALSE}
+knitr::opts_chunk$set(message = FALSE)
+Sys.setenv("plotly_username"="RPlotBot")
+Sys.setenv("plotly_api_key"="q0lz6r5efr")
+```
+
 # Plotly Graphs in Shiny
 
 Plotly works with Shiny entirely *client-side* either through [plotly.js](https://plot.ly/javascript) or with Plotly's [postMessage API](https://github.com/plotly/postMessage-API). This means that updating the Plotly graphs is *fast* because no external calls are made to a Plotly server. You can export Plotly graphs to your account by clicking the <code>Edit chart</code> link on the bottom right of the chart.
@@ -28,7 +34,7 @@ Plotly works with Shiny entirely *client-side* either through [plotly.js](https:
 ### Example 1 - Plotly's Native Syntax
 
 #### `ui.R`
-```
+```{r, message=FALSE}
 
 library(shiny)
 library(plotly)
@@ -45,7 +51,7 @@ shinyUI(fluidPage(
 ```
 
 #### `server.R`
-```R
+```{r, message=FALSE}
 library(shiny)
 library(plotly)
 
@@ -72,7 +78,7 @@ shinyServer(function(input, output) {
 ### Example 2 - Render `ggplotly`
 
 #### `ui.R`
-```R
+```{r, message=FALSE}
 library(shiny)
 library(plotly)
 
@@ -88,7 +94,7 @@ shinyUI(fluidPage(
 ```
 
 #### `server.R`
-```R
+```{r, message=FALSE}
 library(shiny)
 library(plotly)
 
