--- a/_posts/r/2015-07-30-shiny.md
+++ b/_posts/r/2015-07-30-shiny.md
@@ -15,6 +15,8 @@ has_thumbnail: false
 display_as: get_request
 ---
 
+
+
 # Plotly Graphs in Shiny
 
 Plotly works with Shiny entirely *client-side* either through [plotly.js](https://plot.ly/javascript) or with Plotly's [postMessage API](https://github.com/plotly/postMessage-API). This means that updating the Plotly graphs is *fast* because no external calls are made to a Plotly server. You can export Plotly graphs to your account by clicking the <code>Edit chart</code> link on the bottom right of the chart.
@@ -28,9 +30,16 @@ Plotly works with Shiny entirely *client-side* either through [plotly.js](https:
 ### Example 1 - Plotly's Native Syntax
 
 #### `ui.R`
+
+```r
+library(shiny)
 ```
 
-library(shiny)
+```
+## Error in library(shiny): there is no package called 'shiny'
+```
+
+```r
 library(plotly)
 
 shinyUI(fluidPage(
@@ -44,9 +53,21 @@ shinyUI(fluidPage(
 ))
 ```
 
+```
+## Error in eval(expr, envir, enclos): could not find function "shinyUI"
+```
+
 #### `server.R`
-```R
+
+```r
 library(shiny)
+```
+
+```
+## Error in library(shiny): there is no package called 'shiny'
+```
+
+```r
 library(plotly)
 
 data(movies, package = "ggplot2")
@@ -69,11 +90,23 @@ shinyServer(function(input, output) {
 })
 ```
 
+```
+## Error in eval(expr, envir, enclos): could not find function "shinyServer"
+```
+
 ### Example 2 - Render `ggplotly`
 
 #### `ui.R`
-```R
+
+```r
 library(shiny)
+```
+
+```
+## Error in library(shiny): there is no package called 'shiny'
+```
+
+```r
 library(plotly)
 
 shinyUI(fluidPage(
@@ -87,9 +120,21 @@ shinyUI(fluidPage(
 ))
 ```
 
+```
+## Error in eval(expr, envir, enclos): could not find function "shinyUI"
+```
+
 #### `server.R`
-```R
+
+```r
 library(shiny)
+```
+
+```
+## Error in library(shiny): there is no package called 'shiny'
+```
+
+```r
 library(plotly)
 
 data(movies, package = "ggplot2")
@@ -109,4 +154,8 @@ shinyServer(function(input, output) {
     p
   })
 })
+```
+
+```
+## Error in eval(expr, envir, enclos): could not find function "shinyServer"
 ```
