--- a/_posts/r/2015-07-30-shiny.md
+++ b/_posts/r/2015-07-30-shiny.md
@@ -33,13 +33,6 @@ Plotly works with Shiny entirely *client-side* either through [plotly.js](https:
 
 ```r
 library(shiny)
-```
-
-```
-## Error in library(shiny): there is no package called 'shiny'
-```
-
-```r
 library(plotly)
 
 shinyUI(fluidPage(
@@ -53,21 +46,25 @@ shinyUI(fluidPage(
 ))
 ```
 
-```
-## Error in eval(expr, envir, enclos): could not find function "shinyUI"
-```
+<!--html_preserve--><div class="container-fluid">
+<h2>Movie Ratings!</h2>
+<div class="col-sm-4">
+<form class="well">
+<div class="form-group shiny-input-container">
+<label class="control-label" for="bins">Number of bins:</label>
+<input class="js-range-slider" id="bins" data-min="1" data-max="50" data-from="10" data-step="1" data-grid="true" data-grid-num="9.8" data-grid-snap="false" data-prettify-separator="," data-keyboard="true" data-keyboard-step="2.04081632653061" data-drag-interval="true" data-data-type="number"/>
+</div>
+</form>
+</div>
+<div class="col-sm-8">
+<iframe id="trendPlot" src="https://plot.ly/~playground/7.embed" class="plotly_shiny" style="border:none;" seamless="TRUE" width="100%" height="550px"></iframe>
+</div>
+</div><!--/html_preserve-->
 
 #### `server.R`
 
 ```r
 library(shiny)
-```
-
-```
-## Error in library(shiny): there is no package called 'shiny'
-```
-
-```r
 library(plotly)
 
 data(movies, package = "ggplot2")
@@ -90,23 +87,12 @@ shinyServer(function(input, output) {
 })
 ```
 
-```
-## Error in eval(expr, envir, enclos): could not find function "shinyServer"
-```
-
 ### Example 2 - Render `ggplotly`
 
 #### `ui.R`
 
 ```r
 library(shiny)
-```
-
-```
-## Error in library(shiny): there is no package called 'shiny'
-```
-
-```r
 library(plotly)
 
 shinyUI(fluidPage(
@@ -120,21 +106,25 @@ shinyUI(fluidPage(
 ))
 ```
 
-```
-## Error in eval(expr, envir, enclos): could not find function "shinyUI"
-```
+<!--html_preserve--><div class="container-fluid">
+<h2>Movie Ratings!</h2>
+<div class="col-sm-4">
+<form class="well">
+<div class="form-group shiny-input-container">
+<label class="control-label" for="bins">Number of bins:</label>
+<input class="js-range-slider" id="bins" data-min="1" data-max="50" data-from="10" data-step="1" data-grid="true" data-grid-num="9.8" data-grid-snap="false" data-prettify-separator="," data-keyboard="true" data-keyboard-step="2.04081632653061" data-drag-interval="true" data-data-type="number"/>
+</div>
+</form>
+</div>
+<div class="col-sm-8">
+<iframe id="trendPlot" src="https://plot.ly/~playground/7.embed" class="plotly_shiny" style="border:none;" seamless="TRUE" width="100%" height="550px"></iframe>
+</div>
+</div><!--/html_preserve-->
 
 #### `server.R`
 
 ```r
 library(shiny)
-```
-
-```
-## Error in library(shiny): there is no package called 'shiny'
-```
-
-```r
 library(plotly)
 
 data(movies, package = "ggplot2")
@@ -154,8 +144,4 @@ shinyServer(function(input, output) {
     p
   })
 })
-```
-
-```
-## Error in eval(expr, envir, enclos): could not find function "shinyServer"
 ```
