fix some 404 plots

--- a/_posts/pandas/finance/candlestick-charts.ipynb
+++ b/_posts/pandas/finance/candlestick-charts.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -17,10 +17,10 @@
     {
      "data": {
       "text/plain": [
-       "'1.8.3'"
+       "'1.8.8'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,13 +47,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5576.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8300.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -87,13 +87,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5634.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8302.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -141,13 +141,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5578.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8304.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -254,13 +254,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5642.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8306.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -321,52 +321,52 @@
        "    <tr>\n",
        "      <th>2015-01-01 00:00:00+00:00</th>\n",
        "      <td>100.000000</td>\n",
-       "      <td>122.056609</td>\n",
-       "      <td>90.101734</td>\n",
-       "      <td>111.975600</td>\n",
+       "      <td>131.185378</td>\n",
+       "      <td>99.561930</td>\n",
+       "      <td>131.185378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-02 00:00:00+00:00</th>\n",
-       "      <td>112.033217</td>\n",
-       "      <td>123.685550</td>\n",
-       "      <td>98.948680</td>\n",
-       "      <td>104.903613</td>\n",
+       "      <td>129.400135</td>\n",
+       "      <td>131.818872</td>\n",
+       "      <td>105.125754</td>\n",
+       "      <td>107.131008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-03 00:00:00+00:00</th>\n",
-       "      <td>104.917966</td>\n",
-       "      <td>110.087204</td>\n",
-       "      <td>83.225349</td>\n",
-       "      <td>90.412981</td>\n",
+       "      <td>107.343323</td>\n",
+       "      <td>125.251750</td>\n",
+       "      <td>105.314314</td>\n",
+       "      <td>113.207397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-04 00:00:00+00:00</th>\n",
-       "      <td>91.655021</td>\n",
-       "      <td>92.522185</td>\n",
-       "      <td>67.021909</td>\n",
-       "      <td>68.099935</td>\n",
+       "      <td>115.106811</td>\n",
+       "      <td>120.011895</td>\n",
+       "      <td>85.565535</td>\n",
+       "      <td>87.832330</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-05 00:00:00+00:00</th>\n",
-       "      <td>68.786952</td>\n",
-       "      <td>79.676272</td>\n",
-       "      <td>65.847347</td>\n",
-       "      <td>69.981895</td>\n",
+       "      <td>88.929139</td>\n",
+       "      <td>109.595695</td>\n",
+       "      <td>79.723708</td>\n",
+       "      <td>90.299211</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 open        high        low       close\n",
-       "2015-01-01 00:00:00+00:00  100.000000  122.056609  90.101734  111.975600\n",
-       "2015-01-02 00:00:00+00:00  112.033217  123.685550  98.948680  104.903613\n",
-       "2015-01-03 00:00:00+00:00  104.917966  110.087204  83.225349   90.412981\n",
-       "2015-01-04 00:00:00+00:00   91.655021   92.522185  67.021909   68.099935\n",
-       "2015-01-05 00:00:00+00:00   68.786952   79.676272  65.847347   69.981895"
+       "                                 open        high         low       close\n",
+       "2015-01-01 00:00:00+00:00  100.000000  131.185378   99.561930  131.185378\n",
+       "2015-01-02 00:00:00+00:00  129.400135  131.818872  105.125754  107.131008\n",
+       "2015-01-03 00:00:00+00:00  107.343323  125.251750  105.314314  113.207397\n",
+       "2015-01-04 00:00:00+00:00  115.106811  120.011895   85.565535   87.832330\n",
+       "2015-01-05 00:00:00+00:00   88.929139  109.595695   79.723708   90.299211"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -392,13 +392,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6206.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8311.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -583,14 +583,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\r\n"
+      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
       "\n",
       "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "\n"
@@ -613,6 +615,15 @@
     "    thumbnail='/images/candlestick.png', language='pandas',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=21)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
