--- a/_posts/pandas/finance/ohlc-charts.ipynb
+++ b/_posts/pandas/finance/ohlc-charts.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.7.9'"
+       "'1.8.8'"
       ]
      },
      "execution_count": 1,
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,13 +47,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/5161.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8313.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -88,13 +88,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6072.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8315.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -145,13 +145,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6074.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8317.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -202,13 +202,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6076.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8319.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -269,52 +269,52 @@
        "    <tr>\n",
        "      <th>2015-01-01 00:00:00+00:00</th>\n",
        "      <td>100.000000</td>\n",
-       "      <td>107.845913</td>\n",
-       "      <td>91.715177</td>\n",
-       "      <td>105.520679</td>\n",
+       "      <td>101.789089</td>\n",
+       "      <td>78.062507</td>\n",
+       "      <td>99.197149</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-02 00:00:00+00:00</th>\n",
-       "      <td>105.773190</td>\n",
-       "      <td>118.501096</td>\n",
-       "      <td>102.750119</td>\n",
-       "      <td>102.750119</td>\n",
+       "      <td>99.523991</td>\n",
+       "      <td>114.548820</td>\n",
+       "      <td>94.171902</td>\n",
+       "      <td>109.412094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-03 00:00:00+00:00</th>\n",
-       "      <td>102.099332</td>\n",
-       "      <td>128.187790</td>\n",
-       "      <td>100.087743</td>\n",
-       "      <td>117.196328</td>\n",
+       "      <td>110.412538</td>\n",
+       "      <td>124.291269</td>\n",
+       "      <td>85.566579</td>\n",
+       "      <td>95.512897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-04 00:00:00+00:00</th>\n",
-       "      <td>117.495629</td>\n",
-       "      <td>146.608963</td>\n",
-       "      <td>117.454865</td>\n",
-       "      <td>135.156564</td>\n",
+       "      <td>94.187397</td>\n",
+       "      <td>110.011045</td>\n",
+       "      <td>84.495936</td>\n",
+       "      <td>108.208498</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-05 00:00:00+00:00</th>\n",
-       "      <td>133.795726</td>\n",
-       "      <td>150.954937</td>\n",
-       "      <td>133.790121</td>\n",
-       "      <td>142.589992</td>\n",
+       "      <td>107.742944</td>\n",
+       "      <td>110.223364</td>\n",
+       "      <td>91.743416</td>\n",
+       "      <td>105.990083</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 open        high         low       close\n",
-       "2015-01-01 00:00:00+00:00  100.000000  107.845913   91.715177  105.520679\n",
-       "2015-01-02 00:00:00+00:00  105.773190  118.501096  102.750119  102.750119\n",
-       "2015-01-03 00:00:00+00:00  102.099332  128.187790  100.087743  117.196328\n",
-       "2015-01-04 00:00:00+00:00  117.495629  146.608963  117.454865  135.156564\n",
-       "2015-01-05 00:00:00+00:00  133.795726  150.954937  133.790121  142.589992"
+       "                                 open        high        low       close\n",
+       "2015-01-01 00:00:00+00:00  100.000000  101.789089  78.062507   99.197149\n",
+       "2015-01-02 00:00:00+00:00   99.523991  114.548820  94.171902  109.412094\n",
+       "2015-01-03 00:00:00+00:00  110.412538  124.291269  85.566579   95.512897\n",
+       "2015-01-04 00:00:00+00:00   94.187397  110.011045  84.495936  108.208498\n",
+       "2015-01-05 00:00:00+00:00  107.742944  110.223364  91.743416  105.990083"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -340,13 +340,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6078.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8321.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -365,13 +365,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/6080.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8323.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -571,14 +571,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\r\n"
+      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
       "\n",
       "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "\n"
