--- a/_posts/python/3d-bubble/3dbubble.ipynb
+++ b/_posts/python/3d-bubble/3dbubble.ipynb
@@ -15,12 +15,12 @@
     "collapsed": false
    },
    "source": [
-    "### Example with Sizing and Color by Variables from a dataset"
+    "#### Example with Sizing and Color by Variables from a dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,14 +75,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example with Sizing by a Variable"
+    "#### Example with Sizing by a Variable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Plot planets' distance from sun, density, and gravity with bubble size based on planet size"
+    "Plot planets' distance from sun, density, and gravity with bubble size based on planet size"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "data=[trace1]\n",
     "\n",
     "# Style Layout\n",
-    "layout=Layout(width=800, height=900, title = 'Planets!',\n",
+    "layout=Layout(width=800, height=800, title = 'Planets!',\n",
     "              scene = Scene(xaxis=XAxis(title='Distance from Sun',\n",
     "                                        titlefont=dict(color='Orange')),\n",
     "                            yaxis=YAxis(title='Density',\n",
@@ -158,19 +158,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example with Sizing and Color by Variables\n"
+    "#### Example with Sizing and Color by Variables"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Plot planets' distance from sun, density, and gravity with bubble size based on planet size"
+    "Plot planets' distance from sun, density, and gravity with bubble size based on planet size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -178,13 +178,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8705.embed\" height=\"900px\" width=\"800px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8705.embed\" height=\"800px\" width=\"800px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
     "data=[trace1]\n",
     "\n",
     "# Style Layout\n",
-    "layout=Layout(width=800, height=900, title = 'Planets!!',\n",
+    "layout=Layout(width=800, height=800, title = 'Planets!!',\n",
     "              scene = Scene(xaxis=XAxis(title='Distance from Sun',\n",
     "                                        titlefont=dict(color='Orange')),\n",
     "                            yaxis=YAxis(title='Density',\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -275,6 +275,16 @@
       "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
