dendro plot edit

--- a/_posts/python/dendrogram/dendrograms.ipynb
+++ b/_posts/python/dendrogram/dendrograms.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
        "'1.8.8'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -135,7 +135,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -317,6 +317,16 @@
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -335,6 +345,15 @@
     "    thumbnail='/images/dendrogram.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=33)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
