fix python ribbon plot url

--- a/_posts/python/3d-ribbon/ribbon.ipynb
+++ b/_posts/python/3d-ribbon/ribbon.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
        "'1.8.8'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -134,6 +134,16 @@
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -145,7 +155,7 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'ribbon.ipynb', 'python/dendrogram', 'Python Ribbon Plots | plotly',\n",
+    "    'ribbon.ipynb', 'python/ribbon-plots', 'Python Ribbon Plots | plotly',\n",
     "    'How to make ribbon plots in Python. ',\n",
     "    name = 'Ribbon Plots',\n",
     "    thumbnail='/images/ribbon-plot.png', language='python',\n",
