--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -202,6 +202,8 @@
     "         'August', 'September', 'October', 'November', 'December']\n",
     "high_2000 = [32.5, 37.6, 49.9, 53.0, 69.1, 75.4, 76.5, 76.6, 70.7, 60.6, 45.1, 29.3]\n",
     "low_2000 = [13.8, 22.3, 32.5, 37.2, 49.9, 56.1, 57.7, 58.3, 51.2, 42.8, 31.6, 15.9]\n",
+    "high_2007 = [36.5, 26.6, 43.6, 52.3, 71.5, 81.4, 80.5, 82.2, 76.0, 67.3, 46.1, 35.0]\n",
+    "low_2007 = [23.6, 14.0, 27.0, 36.8, 47.6, 57.7, 58.9, 61.2, 53.3, 48.5, 31.0, 23.6]\n",
     "high_2014 = [28.8, 28.5, 37.0, 56.8, 69.7, 79.7, 78.5, 77.8, 74.1, 62.6, 45.3, 39.9]\n",
     "low_2014 = [12.7, 14.3, 18.6, 35.5, 49.9, 58.0, 60.0, 58.6, 51.7, 45.2, 32.2, 29.1]\n",
     "\n",
@@ -224,14 +226,32 @@
     ")\n",
     "trace2 = go.Scatter(\n",
     "    x = month,\n",
+    "    y = high_2007,\n",
+    "    name = 'High 2007',\n",
+    "    line = go.Line(\n",
+    "        color = ('rgb(205, 12, 24)'),\n",
+    "        width = 4,\n",
+    "        dash = 'dash') # dash options include 'dash', 'dot', and 'dashdot'\n",
+    ")\n",
+    "trace3 = go.Scatter(\n",
+    "    x = month,\n",
+    "    y = low_2007,\n",
+    "    name = 'Low 2007',\n",
+    "    line = go.Line(\n",
+    "        color = ('rgb(22, 96, 167)'),\n",
+    "        width = 4,\n",
+    "        dash = 'dash')\n",
+    ")\n",
+    "trace4 = go.Scatter(\n",
+    "    x = month,\n",
     "    y = high_2000,\n",
     "    name = 'High 2000',\n",
     "    line = go.Line(\n",
     "        color = ('rgb(205, 12, 24)'),\n",
     "        width = 4,\n",
-    "        dash = 'dot') # other dash options include 'dash' and 'dashdot'\n",
+    "        dash = 'dot')\n",
     ")\n",
-    "trace3 = go.Scatter(\n",
+    "trace5 = go.Scatter(\n",
     "    x = month,\n",
     "    y = low_2000,\n",
     "    name = 'Low 2000',\n",
@@ -240,7 +260,7 @@
     "        width = 4,\n",
     "        dash = 'dot')\n",
     ")\n",
-    "data = [trace0, trace1, trace2, trace3]\n",
+    "data = [trace0, trace1, trace2, trace3, trace4, trace5]\n",
     "\n",
     "# Edit the layout\n",
     "layout = go.Layout(title = 'Average High and Low Temperatures in New York',\n",
@@ -288,14 +308,22 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "trace1 = go.Scatter(\n",
-    "    x=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
-    "    y=[10, 20, None, 15, 10, 5, 15, None, 20, 10],\n",
+    "    x=[1, 2, 3, 4, 5, \n",
+    "       6, 7, 8, 9, 10,\n",
+    "       11, 12, 13, 14, 15],\n",
+    "    y=[10, 20, None, 15, 10,\n",
+    "       5, 15, None, 20, 10,\n",
+    "       10, 15, 25, 20, 10],\n",
     "    name = '<b>No</b> Gaps', # Style name/legend entry with html tags\n",
     "    connectgaps=True\n",
     ")\n",
     "trace2 = go.Scatter(\n",
-    "    x=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
-    "    y=[5, 15, None, 10, 5, 0, 10, None, 15, 5],\n",
+    "    x=[1, 2, 3, 4, 5,\n",
+    "       6, 7, 8, 9, 10,\n",
+    "       11, 12, 13, 14, 15],\n",
+    "    y=[5, 15, None, 10, 5,\n",
+    "       0, 10, None, 15, 5,\n",
+    "       5, 10, 20, 15, 5],\n",
     "    name = 'Gaps',\n",
     ")\n",
     "\n",
